WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
122231
The LLInt should not use JITStackFrame
https://bugs.webkit.org/show_bug.cgi?id=122231
Summary
The LLInt should not use JITStackFrame
Michael Saboff
Reported
2013-10-02 13:14:55 PDT
As part of
https://bugs.webkit.org/show_bug.cgi?id=116888
- "JSC Should use the C Stack for JIT code", we need to eliminate the JITStackFrame struct. We need to remove its use from all code. THis bug is to track the changes to remove it from the LLInt.
Attachments
Patch
(12.50 KB, patch)
2013-10-02 14:01 PDT
,
Michael Saboff
fpizlo
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Saboff
Comment 1
2013-10-02 14:01:10 PDT
Created
attachment 213197
[details]
Patch
Michael Saboff
Comment 2
2013-10-02 14:20:56 PDT
Committed
r156794
: <
http://trac.webkit.org/changeset/156794
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug