The LLInt should not use JITStackFrame https://bugs.webkit.org/show_bug.cgi?id=122231

Reviewed by Filip Pizlo.

Replaced uses of JITStackFrame::vm with code to either access the vm via the CodeBlock from
known JavaScript call frames or via the JSScope* for host call frames.  This eliminates
all uses of JITStackFrame from the LLInt.

* heap/MarkedBlock.h: Made LLIntOffsetsExtractor a friend to access member offsets.
* heap/WeakSet.h: Made LLIntOffsetsExtractor a friend to access member offsets.
* llint/LLIntData.cpp:
(JSC::LLInt::Data::performAssertions): Added an ASSERT for the newly added MarkedBlockMask
* llint/LowLevelInterpreter.asm:
* llint/LowLevelInterpreter32_64.asm:
* llint/LowLevelInterpreter64.asm:


Canonical link: https://commits.webkit.org/140278@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156794 268f45cc-cd09-0410-ab3c-d52691b4dbfc