Source/JavaScriptCore/llint/LowLevelInterpreter.asm
@@ -157,6 +157,8 @@ const Dynamic = 6
 
 const ResolveModeMask = 0xffff
 
+const MarkedBlockMask = ~0xffff
+
 # Allocation constants
 if JSVALUE64
     const JSFinalObjectSizeClassIndex = 1
@@ -371,7 +373,7 @@ macro functionInitialization(profileArgSkip)
     # Check stack height.
     loadi CodeBlock::m_numCalleeRegisters[t1], t0
     loadp CodeBlock::m_vm[t1], t2
-    loadp VM::interpreter[t2], t2   # FIXME: Can get to the JSStack from the JITStackFrame
+    loadp VM::interpreter[t2], t2
     lshiftp 3, t0
     subp cfr, t0, t0
     bpbeq Interpreter::m_stack + JSStack::m_end[t2], t0, .stackHeightOK
@@ -655,7 +657,8 @@ _llint_op_jngreatereq:
 
 _llint_op_loop_hint:
     traceExecution()
-    loadp JITStackFrame::vm[sp], t1
+    loadp CodeBlock[cfr], t1
+    loadp CodeBlock::m_vm[t1], t1
     loadb VM::watchdog+Watchdog::m_timerDidFire[t1], t0
     btbnz t0, .handleWatchdogTimer
 .afterWatchdogTimerCheck:
